[project]
name = "pytest-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Diwash Bhandari", email = "diwash.bhandari@codavatar.tech" }
]
dependencies = [
    "pytest>=8.1.1",
    "hypothesis>=6.100.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_python"]

[tool.rye.scripts]
test={cmd="pytest --log-cli-level=DEBUG "}
test_v={cmd="pytest -v"}
test_k={cmd="pytest -k"}
test_s={cmd="pytest -s -v "}
# display test and data generation statistics.
test_hypothesis={cmd="pytest -s -v --hypothesis-show-statistics"}